News UAT/force-app/main/default/objects/EMMA_Readership_and_Circulation_Data__c/EMMA_Readership_and_Circulation_Data__c.object-meta.xml
<CustomObject>
    <description>Hold information on Readership and Circulation from EMMA</description>
    <label>EMMA Readership and Circulation Data</label>
    <nameField>
        <displayFormat>ERCD-{0000000}</displayFormat>
        <label>Record Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>EMMA Readership and Circulation Datas</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>