News UAT/force-app/main/default/objects/EMMA_Readership_and_Circulation_Data__c/fields/Circulation__c.field-meta.xml
<CustomField>
    <fullName>Circulation__c</fullName>
    <label>Circulation</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>