News UAT/force-app/main/default/objects/EMMA_Readership_and_Circulation_Data__c/fields/Genera_Publication_Code__c.field-meta.xml
<CustomField>
    <fullName>Genera_Publication_Code__c</fullName>
    <label>Genera Publication Code</label>
    <length>100</length>
    <type>Text</type>
</CustomField>