News UAT/force-app/main/default/objects/EMMA_Readership_and_Circulation_Data__c/fields/Genera_Publication_Description__c.field-meta.xml
<CustomField>
    <fullName>Genera_Publication_Description__c</fullName>
    <label>Genera Publication Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>