News UAT/force-app/main/default/objects/EMMA_Readership_and_Circulation_Data__c/fields/Readership_Monday_Friday__c.field-meta.xml
<CustomField>
    <fullName>Readership_Monday_Friday__c</fullName>
    <label>Readership Monday - Friday</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>