News UAT/force-app/main/default/objects/EMMA_Readership_and_Circulation_Data__c/fields/Readership_Saturday_Sunday__c.field-meta.xml
<CustomField>
    <fullName>Readership_Saturday_Sunday__c</fullName>
    <label>Readership Saturday - Sunday</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>