News UAT/force-app/main/default/objects/EMMA_Readership_and_Circulation_Data__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Circulation__c</columns>
    <columns>EMMA_Publication_Name__c</columns>
    <columns>Genera_Publication_Code__c</columns>
    <columns>Genera_Publication_Description__c</columns>
    <columns>Genera_Publication_Name__c</columns>
    <columns>Readership_Monday_Friday__c</columns>
    <columns>Readership_Saturday_Sunday__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <columns>LAST_UPDATE</columns>
    <columns>OBJECT_ID</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>